--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-
-
-<noscript><meta http-equiv="refresh" content="0; url=http://selab.postech.ac.kr/~kmbae"></noscript>
-
-<body onload="window.location = 'http://selab.postech.ac.kr/~kmbae'">
-
-    <!-- Your content here -->
-
-</body>
+<!DOCTYPE html>
+<html>
+    <head> 
+        <noscript>
+            <meta http-equiv="refresh" content="0; url=http://selab.postech.ac.kr/~kmbae">
+        </noscript>
+        <link rel="canonical" href="http://selab.postech.ac.kr/~kmbae"/>
+    </head>
+        
+    <body onload="window.location = 'http://selab.postech.ac.kr/~kmbae'">
+    </body>
+</html>
