--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head> 
         <noscript>
-            <meta http-equiv="refresh" content="0; url=http://selab.postech.ac.kr/~kmbae">
+            <meta http-equiv="refresh" content="0; url=http://sevlab.postech.ac.kr/~kmbae">
         </noscript>
-        <link rel="canonical" href="http://selab.postech.ac.kr/~kmbae"/>
+        <link rel="canonical" href="http://sevlab.postech.ac.kr/~kmbae"/>
     </head>
         
-    <body onload="window.location = 'http://selab.postech.ac.kr/~kmbae'">
+    <body onload="window.location = 'http://sevlab.postech.ac.kr/~kmbae'">
     </body>
 </html>
